# ComfyUI-QI-QwenEditSafe

./: README.md  README.zh.md  README_中文.txt  __init__.py  install.py  pyproject.toml  qi_dype.py  qi_edit.py  qi_refedit.py  qi_vae_decode.py  qi_vl_loader.py  qwen_edit_safe_minimal_v1.json  requirements.txt
example_workflows/: qwen-image-edit-2509.json  qwen_edit_safe_base 0923update.json  qwen_edit_safe_base.json  qwen_edit_safe_instantx_controlnet.json  qwen_edit_safe_minimal_v1.json  qwen_edit_safe_minimal_v2.json
locales/zh/: main.json  nodeDefs.json
